# rainfall

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: demo.py
rainfall/: __init__.py  cli.py  config.py  core.py  llm.py  parser.py
